Object Color change doesn't update the rendering in 2.90+ for instanced collections (both linked and local) #81729

Closed
opened 2020-10-15 11:21:12 +02:00 by Adam Preisler · 7 comments

System Information
Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-14 20:04, hash: a509e79a4c
Worked: 2.83
Caused by e65c78cd43

Short description of error
Object Color change doesn't update the rendering in 2.90+ for instanced collections (both linked and local)

Exact steps for others to reproduce the error
Bug-Object-Color-Not-Updating.blend

  • change to rendered viewport
  • change the object color on the instancer --> no color update in render

And Screen Capture:

2020-10-15 11-05-17.mp4

**System Information** Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-14 20:04, hash: `a509e79a4c` Worked: 2.83 Caused by e65c78cd43 **Short description of error** Object Color change doesn't update the rendering in 2.90+ for instanced collections (both linked and local) **Exact steps for others to reproduce the error** [Bug-Object-Color-Not-Updating.blend](https://archive.blender.org/developer/F8994036/Bug-Object-Color-Not-Updating.blend) - change to rendered viewport - change the object color on the instancer --> no color update in render And Screen Capture: [2020-10-15 11-05-17.mp4](https://archive.blender.org/developer/F8994033/2020-10-15_11-05-17.mp4)
Author

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-15 12:00:51 +02:00
Member

Can confirm, will check/bisect.

Can confirm, will check/bisect.

This issue was referenced by blender/cycles@dc85ccce4d

This issue was referenced by blender/cycles@dc85ccce4db18d47c486d62aaba3c460687ca487

This issue was referenced by 9c7fda6de3

This issue was referenced by 9c7fda6de3e828be40999c960bce2dc89e54b7cb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81729
No description provided.